fix[tasklist]: Fix close button icon blurred when scale to 200%
- 修复窗口预览关闭按钮在缩放率为200%时按钮图标模糊的问题

--- a/data/applet.css
+++ b/data/applet.css
@@ -279,7 +279,12 @@ button.previewer-close-btn{
 }
 
 button.previewer-close-btn {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
     background-image: url("/kiran-tasklist/icon/close_normal");
+    min-width: 16px;
+    min-height: 16px;
 }
 
 button.previewer-close-btn:hover{
